--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -59,15 +59,15 @@ html {
 }
 
 body {
-  color: #515151;
-  background-color: #fff;
+  color: #299;
+  background-color: #223;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: #268bd2;
+  color: #ff4;
   text-decoration: none;
 }
 a strong {
@@ -84,7 +84,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
   font-weight: bold;
   line-height: 1.25;
-  color: #313131;
+  color: #f84;
   text-rendering: optimizeLegibility;
 }
 h1 {
@@ -110,7 +110,7 @@ p {
 }
 
 strong {
-  color: #303030;
+  color: #f9f;
 }
 
 
@@ -139,7 +139,7 @@ hr {
 abbr {
   font-size: 85%;
   font-weight: bold;
-  color: #555;
+  color: #f9f;
   text-transform: uppercase;
 }
 abbr[title] {
