--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -49,25 +49,25 @@ body {
 
 html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 1.5;
 }
 @media (min-width: 38em) {
   html {
-    font-size: 15px;
+    font-size: 20px;
   }
 }
 
 body {
-  color: #299;
-  background-color: #223;
+  color: #515151;
+  background-color: #fff;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: #ff4;
+  color: #268bd2;
   text-decoration: none;
 }
 a strong {
@@ -84,7 +84,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
   font-weight: bold;
   line-height: 1.25;
-  color: #f84;
+  color: #313131;
   text-rendering: optimizeLegibility;
 }
 h1 {
@@ -110,7 +110,7 @@ p {
 }
 
 strong {
-  color: #f9f;
+  color: #303030;
 }
 
 
@@ -139,7 +139,7 @@ hr {
 abbr {
   font-size: 85%;
   font-weight: bold;
-  color: #f9f;
+  color: #555;
   text-transform: uppercase;
 }
 abbr[title] {
@@ -308,10 +308,10 @@ tbody tr:nth-child(odd) th {
 .masthead-title {
   margin-top: 0;
   margin-bottom: 0;
-  color: #9d9;
+  color: #505050;
 }
 .masthead-title a {
-  color: #9d9;
+  color: #505050;
 }
 .masthead-title small {
   font-size: 75%;
@@ -337,7 +337,7 @@ tbody tr:nth-child(odd) th {
 .page-title,
 .post-title,
 .post-title a {
-  color: #f84;
+  color: #303030;
 }
 .page-title,
 .post-title {
